Tried to change the structure such that settings are in the source file, but the parsing directives and loader and pre-processor can't bei n source, since then source can't be loaded. So this is a dead end, and a settings file will be needed.

--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,12 +1,14 @@
 
 Apt-get
-    For lxml parser: (http://stackoverflow.com/questions/6504810/how-to-install-lxml-on-ubuntu)
-        libxml2-dev
-        libxslt1-dev
-        python-dev
+	For lxml parser: (http://stackoverflow.com/questions/6504810/how-to-install-lxml-on-ubuntu)
+		libxml2-dev   (compile)
+		libxslt1-dev  (compile)
+		python-dev    (compile)
 
 Pip
-    beautifulsoup4
-    lxml
+	beautifulsoup4   (compile)
+	lxml   (compile)
+	appdirs
+	argparse
 
 
